feat: 필요 entity 구현
필요없는 부분은 나중에 정리 예정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,17 @@
+spring.config.import=myDatabaseInfo.properties
 
+#batch schema
+spring.batch.jdbc.initialize-schema=never
+
+#jpa
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+#logging
+#deeping LV : 1.ERROR 2.WARN 3.INFO 4.DEBUG. 5.TRACE
+logging.level.root=INFO
+#logging.file.name=log/developer.log
+
+#BATCH
+#job parameter name
+spring.batch.job.names= ${job.name:NONE}
