feat: h2 db를 사용한 단순 실행 테스트

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.config.import=myDatabaseInfo.properties
 
 #batch schema
-spring.batch.jdbc.initialize-schema=never
+spring.batch.jdbc.initialize-schema=embedded
 
 #jpa
 spring.jpa.show-sql=true
